--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,28 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File",
+            "name": "Python Debugger: SMDB (run.py)",
             "type": "debugpy",
             "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "Run SMDB.bat (terminal)",
-            "type": "node-terminal",
-            "request": "launch",
-            "command": "cmd.exe /d /c \"${workspaceFolder}\\SMDB.bat\"",
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "name": "Bash: Run SMDB.sh",
-            "type": "bashdb",
-            "request": "launch",
-            "program": "${workspaceFolder}/SMDB.sh",
+            "program": "${workspaceFolder}/run.py",
             "cwd": "${workspaceFolder}",
-            "args": [],
-            "env": {},
-            "console": "integratedTerminal"
-        }
+            "console": "integratedTerminal",
+            "justMyCode": false
+        },
     ]
 }
