--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,18 @@
-{
+﻿{
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: SMDB (run.py)",
+            "name": "Python Debugger: SMDB (module src)",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/run.py",
+            "module": "src",
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
             "justMyCode": false
         },
     ]
 }
+
